<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity"
    tools:ignore="MissingPrefix">

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/llSearchBar"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSearch"
            android:inputType="text"
            android:lines="1"
            android:background="@drawable/border_edit_text"
            android:drawableStart="@drawable/ic_baseline_search"
            android:layout_width="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="16dp"
            android:imeOptions="actionDone"
            android:hint="@string/search_user"
            android:layout_height="48dp"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvWarningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/limit_exceeded"
        android:textSize="14sp"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/llSearchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarningMessage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvEndOfData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/end_of_data"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
